crates/ir/tests/ir/snapshots/main__ir__lower__functions__comparison_chain.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module functions__comparison_chain

import core/peek/peek as peek(d) -> d
import core/list/last as last(List[i4]) -> Option[i4]
import core/list/sort_by as sort_by(List[n6], (n6) -> c6) -> List[n6]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[a12]) -> List[a12]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
declare println: (g) -> Unit

fn main() -> Unit =
  let_join v60(v8: Unit) =
    let_join v59(v17: Unit) =
      let_join v58(v28: Unit) =
        let_join v57(v39: Unit) =
          let_join v56(v48: Unit) =
            let_join v55(v53: Bool) =
              let v49: Dict[core/show.Show, Bool] = get_dict core/show.Show[Bool]
              let v54: Unit = call println(v49, v53)
              v54
            in
            let v50: Dict[core/eq.Eq, Int] = get_dict core/eq.Eq[Int]
            let v51: Bool = trait_call core/eq.Eq.eq(v50, 10, 10)
            let v52: Bool = not(v51)
            jump v55(v52)
          in
          let_join v47(v45: Bool) =
            let v42: Dict[core/show.Show, Bool] = get_dict core/show.Show[Bool]
            let v46: Unit = call println(v42, v45)
            jump v56(v46)
          in
          let v43: Dict[core/eq.Eq, Int] = get_dict core/eq.Eq[Int]
          let v44: Bool = trait_call core/eq.Eq.eq(v43, 10, 10)
          jump v47(v44)
        in
        let_join v38(v36: Bool) =
          let v32: Dict[core/show.Show, Bool] = get_dict core/show.Show[Bool]
          let v37: Unit = call println(v32, v36)
          jump v57(v37)
        in
        let v33: Dict[core/ord.Ord, Int] = get_dict core/ord.Ord[Int]
        let v34: Bool = trait_call core/ord.Ord.lt(v33, 10, 20)
        let v35: Bool = not(v34)
        jump v38(v35)
      in
      let_join v27(v25: Bool) =
        let v21: Dict[core/show.Show, Bool] = get_dict core/show.Show[Bool]
        let v26: Unit = call println(v21, v25)
        jump v58(v26)
      in
      let v22: Dict[core/ord.Ord, Int] = get_dict core/ord.Ord[Int]
      let v23: Bool = trait_call core/ord.Ord.lt(v22, 20, 10)
      let v24: Bool = not(v23)
      jump v27(v24)
    in
    let_join v16(v14: Bool) =
      let v11: Dict[core/show.Show, Bool] = get_dict core/show.Show[Bool]
      let v15: Unit = call println(v11, v14)
      jump v59(v15)
    in
    let v12: Dict[core/ord.Ord, Int] = get_dict core/ord.Ord[Int]
    let v13: Bool = trait_call core/ord.Ord.lt(v12, 20, 10)
    jump v16(v13)
  in
  let_join v7(v5: Bool) =
    let v2: Dict[core/show.Show, Bool] = get_dict core/show.Show[Bool]
    let v6: Unit = call println(v2, v5)
    jump v60(v6)
  in
  let v3: Dict[core/ord.Ord, Int] = get_dict core/ord.Ord[Int]
  let v4: Bool = trait_call core/ord.Ord.lt(v3, 10, 20)
  jump v7(v4)
