crates/ir/tests/ir/snapshots/main__ir__lower__functions__deep_stack.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module functions__deep_stack

import core/peek/peek as peek(d) -> d
import core/list/last as last(List[n3]) -> Option[n3]
import core/list/sort_by as sort_by(List[s5], (s5) -> h5) -> List[s5]
import core/list/filter as filter(List[f1], (f1) -> Bool) -> List[f1]
import core/list/fold as fold(List[s1], t1, (t1, s1) -> t1) -> t1
import core/list/map as map(List[u], (u) -> w) -> List[w]
import core/vec/to_list as to_list(Vec[n10]) -> List[n10]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
declare println: (g) -> Unit

fn main() -> Unit =
  let v0: Int = 0
  let v1: Int = add_int(v0, 1)
  let v2: Int = add_int(v1, 1)
  let v3: Int = add_int(v2, 1)
  let v4: Int = add_int(v3, 1)
  let v5: Int = add_int(v4, 1)
  let v6: Int = add_int(v5, 1)
  let v7: Int = add_int(v6, 1)
  let v8: Int = add_int(v7, 1)
  let v9: Int = add_int(v8, 1)
  let v10: Int = add_int(v9, 1)
  let v11: Int = add_int(v10, 1)
  let v12: Int = add_int(v11, 1)
  let v13: Int = add_int(v12, 1)
  let v14: Int = add_int(v13, 1)
  let v15: Int = add_int(v14, 1)
  let v16: Int = add_int(v15, 1)
  let v17: Int = add_int(v16, 1)
  let v18: Int = add_int(v17, 1)
  let v19: Int = add_int(v18, 1)
  let v20: Int = add_int(v19, 1)
  let v21: Int = add_int(v20, 1)
  let v22: Int = add_int(v21, 1)
  let v23: Int = add_int(v22, 1)
  let v24: Int = add_int(v23, 1)
  let v25: Int = add_int(v24, 1)
  let v26: Int = add_int(v25, 1)
  let v27: Int = add_int(v26, 1)
  let v28: Int = add_int(v27, 1)
  let v29: Int = add_int(v28, 1)
  let v30: Int = add_int(v29, 1)
  let v31: Int = add_int(v30, 1)
  let v32: Int = add_int(v31, 1)
  let v33: Int = add_int(v32, 1)
  let v34: Int = add_int(v33, 1)
  let v35: Int = add_int(v34, 1)
  let v36: Int = add_int(v35, 1)
  let v37: Int = add_int(v36, 1)
  let v38: Int = add_int(v37, 1)
  let v39: Int = add_int(v38, 1)
  let v40: Int = add_int(v39, 1)
  let v41: Int = add_int(v40, 1)
  let v42: Int = add_int(v41, 1)
  let v43: Int = add_int(v42, 1)
  let v44: Int = add_int(v43, 1)
  let v45: Int = add_int(v44, 1)
  let v46: Int = add_int(v45, 1)
  let v47: Int = add_int(v46, 1)
  let v48: Int = add_int(v47, 1)
  let v49: Int = add_int(v48, 1)
  let v50: Int = add_int(v49, 1)
  let v51: Int = add_int(v50, 1)
  let v52: Int = add_int(v51, 1)
  let v53: Int = add_int(v52, 1)
  let v54: Int = add_int(v53, 1)
  let v55: Int = add_int(v54, 1)
  let v56: Int = add_int(v55, 1)
  let v57: Int = add_int(v56, 1)
  let v58: Int = add_int(v57, 1)
  let v59: Int = add_int(v58, 1)
  let v60: Int = add_int(v59, 1)
  let v61: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v62: Unit = call println(v61, v60)
  v62
