crates/ir/tests/ir/snapshots/main__ir__lower__functions__factorial.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module functions__factorial

import core/peek/peek as peek(d) -> d
import core/list/last as last(List[n3]) -> Option[n3]
import core/list/sort_by as sort_by(List[s5], (s5) -> h5) -> List[s5]
import core/list/filter as filter(List[f1], (f1) -> Bool) -> List[f1]
import core/list/fold as fold(List[s1], t1, (t1, s1) -> t1) -> t1
import core/list/map as map(List[u], (u) -> w) -> List[w]
import core/vec/to_list as to_list(Vec[p8]) -> List[p8]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
declare println: (g) -> Unit

fn factorial(v0: Int) -> Int =
  let_join v7(v3: Bool) =
    if v3 {
      1
    } else {
      let v4: Int = sub_int(v0, 1)
      let v5: Int = call factorial(v4)
      let v6: Int = mul_int(v0, v5)
      v6
    }
  in
  let v1: Dict[core/eq.Eq, Int] = get_dict core/eq.Eq[Int]
  let v2: Bool = trait_call core/eq.Eq.eq(v1, v0, 0)
  jump v7(v2)

fn main() -> Unit =
  let v9: Int = call factorial(10)
  let v8: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v10: Unit = call println(v8, v9)
  v10
