crates/ir/tests/ir/snapshots/main__ir__lower__functions__recur_countdown.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module functions__recur_countdown

import core/peek/peek as peek(e) -> e
import core/list/last as last(List[q3]) -> Option[q3]
import core/list/sort_by as sort_by(List[v5], (v5) -> k5) -> List[v5]
import core/list/filter as filter(List[g1], (g1) -> Bool) -> List[g1]
import core/list/fold as fold(List[t1], v1, (v1, t1) -> v1) -> v1
import core/list/map as map(List[v], (v) -> x) -> List[x]
import core/vec/to_list as to_list(Vec[y7]) -> List[y7]
import core/io/println as println(h) -> Unit
import core/option/Some as Some(c) -> Option[c]
import core/result/Ok as Ok(e) -> Result[d, e]
import core/result/Err as Err(d) -> Result[d, e]
import core/list/Cons as Cons(f, List[f]) -> List[f]
declare println: (h) -> Unit

fn countdown(v0: Int) -> Int =
  let_join [recur] v1(v2: Int) =
    let_join v7(v5: Bool) =
      if v5 {
        0
      } else {
        let v6: Int = sub_int(v2, 1)
        jump v1(v6)
      }
    in
    let v3: Dict[core/eq.Eq, Int] = get_dict core/eq.Eq[Int]
    let v4: Bool = trait_call core/eq.Eq.eq(v3, v2, 0)
    jump v7(v4)
  in
  jump v1(v0)

fn main() -> Unit =
  let v9: Int = call countdown(10)
  let v8: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v10: Unit = call println(v8, v9)
  v10
