crates/ir/tests/ir/snapshots/main__ir__lower__functions__recur_in_lambda.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module functions__recur_in_lambda

import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/traversable/sequence as sequence(o[p[r]]) -> p[o[r]]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
declare println: (g) -> Unit

fn main() -> Unit =
  let v0: (Int) -> Int = make_closure(lambda$31, [])
  let v10: Int = call_closure v0(3)
  let v9: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v11: Unit = call println(v9, v10)
  v11

fn lambda$31(v1: Int) -> Int =
  let_join [recur] v2(v3: Int) =
    let_join v8(v6: Bool) =
      if v6 {
        0
      } else {
        let v7: Int = sub_int(v3, 1)
        jump v2(v7)
      }
    in
    let v4: Dict[core/eq.Eq, Int] = get_dict core/eq.Eq[Int]
    let v5: Bool = trait_call core/eq.Eq.eq(v4, v3, 0)
    jump v8(v5)
  in
  jump v2(v1)
