crates/ir/tests/ir/snapshots/main__ir__lower__functions__recur_sum.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module functions__recur_sum

import core/peek/peek as peek(e) -> e
import core/list/last as last(List[q3]) -> Option[q3]
import core/list/sort_by as sort_by(List[v5], (v5) -> k5) -> List[v5]
import core/list/filter as filter(List[g1], (g1) -> Bool) -> List[g1]
import core/list/fold as fold(List[t1], v1, (v1, t1) -> v1) -> v1
import core/list/map as map(List[v], (v) -> x) -> List[x]
import core/vec/to_list as to_list(Vec[y7]) -> List[y7]
import core/io/println as println(h) -> Unit
import core/option/Some as Some(c) -> Option[c]
import core/result/Ok as Ok(e) -> Result[d, e]
import core/result/Err as Err(d) -> Result[d, e]
import core/list/Cons as Cons(f, List[f]) -> List[f]
declare println: (h) -> Unit

fn sum(v0: Int, v1: Int) -> Int =
  let_join [recur] v2(v3: Int, v4: Int) =
    let_join v10(v7: Bool) =
      if v7 {
        v4
      } else {
        let v8: Int = sub_int(v3, 1)
        let v9: Int = add_int(v4, v3)
        jump v2(v8, v9)
      }
    in
    let v5: Dict[core/eq.Eq, Int] = get_dict core/eq.Eq[Int]
    let v6: Bool = trait_call core/eq.Eq.eq(v5, v3, 0)
    jump v10(v6)
  in
  jump v2(v0, v1)

fn main() -> Unit =
  let v12: Int = call sum(100, 0)
  let v11: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v13: Unit = call println(v11, v12)
  v13
