crates/ir/tests/ir/snapshots/main__ir__lower__functions__trailing_let_pattern.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module functions__trailing_let_pattern

import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/traversable/sequence as sequence(o[p[r]]) -> p[o[r]]
import core/io/println as println(g) -> Unit
declare println: (g) -> Unit

fn trailing_wildcard() -> Unit =
  let v0: Int = add_int(1, 2)
  ()

fn trailing_tuple() -> Unit =
  let v1: (Int, Int) = tuple(1, 2)
  let v2: Int = tuple_project v1.0
  let v3: Int = tuple_project v1.1
  ()

fn main() -> Unit =
  let v4: Unit = call trailing_wildcard()
  let v5: Unit = call trailing_tuple()
  let v6: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v7: Unit = call println(v6, "ok")
  v7
